# heaven

./: .gitignore  CLAUDE.md  README.md  SURVEY_SPEC.md  V0_IMPLEMENTATION.md
app/: index.html  vite.config.ts
app/.storybook/: preview.tsx
app/src/: routes.tsx
apps/dns-vpn-scrobbler/: .gitignore  CLAUDE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/dns-vpn-scrobbler/src-tauri/: Cargo.toml  tauri.conf.json
apps/dns-vpn-scrobbler/src-tauri/capabilities/: default.json
apps/dns-vpn-scrobbler/src-tauri/icons/: icon.icns
apps/dns-vpn-scrobbler/src-tauri/src/: lib.rs  main.rs
apps/dns-vpn-scrobbler/src-tauri/src/scrobble/: mod.rs  mpris.rs  queue.rs  state.rs  types.rs
apps/dns-vpn-scrobbler/src-tauri/src/vpn/: auth.rs  config.rs  connection.rs  mod.rs  types.rs
apps/old-website/: .gitignore  index.html
apps/website/: .env.example  CLAUDE.md  README.md  index.html  package.json  vite.config.ts
contracts/base/: CLAUDE.md
contracts/dating/: .gitignore  CLAUDE.md  foundry.toml  hardhat.config.ts  package-lock.json
contracts/eth-l1/: .gitignore  CLAUDE.md  foundry.toml
contracts/fhevm/: CLAUDE.md  README.md  hardhat.config.ts
contracts/name-registry/: CLAUDE.md
contracts/zama-fhe/: ARCHITECTURE.md  CLAUDE.md  README.md  hardhat.config.ts  package-lock.json  package.json
lit-actions/: .env.example  CLAUDE.md  README.md  package.json
lit-actions/actions/: dating-setbasics-sponsor-v1.js  dating-setbasics-v1.js  profile-pin-v1.js  scrobble-batch-sign-v1.js  scrobble-batch-sign-v2.js  survey-registry-sponsor-v1.js
lit-actions/cids/: dev.json
lit-actions/config/: lit-envs.json
lit-actions/output/: pkp-naga-dev.json
lit-actions/scripts/: add-permission.ts  encrypt-key.ts  mint-pkp.ts  setup.ts  upload-action.ts  verify.ts
lit-actions/tests/: dating-setbasics-fhe.test.ts  dating-setbasics-sponsor.test.ts  dating-setbasics.test.ts  profile-pin.test.ts  scrobble-batch-sign.test.ts  survey-sponsor.test.ts
old-app/: CLAUDE.md  package.json  vite.config.ts
old-app/src/: main.tsx
services/: README.md
services/dns-server/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  PLAN.md  README.md  deploy.sh  docker-compose.production.yml  docker-compose.yml
services/dns-server/deploy-templates/coredns/: Corefile
services/dns-server/deploy-templates/wg_confs/: wg0.conf.template
services/dns-server/migrations/: 001_init.sql  002_user_rules.sql
services/dns-server/src/: config.rs  last_seen.rs  main.rs
services/dns-server/src/api/: mod.rs
services/dns-server/src/auth/: mod.rs
services/dns-server/src/categorize/: mod.rs
services/dns-server/src/dns/: handler.rs  heaven.rs  mod.rs  server.rs  upstream.rs
services/dns-server/src/ingest/: mod.rs
services/dns-server/src/rules/: mod.rs
services/dns-server/src/users/: mod.rs
services/dns-server/tests/: health_check.sh
services/dns-server/tinybird/datasources/: dns_events.datasource  user_category_daily_mv.datasource
services/dns-server/tinybird/pipes/: context.pipe  trends.pipe  user_category_daily.pipe  vector.pipe
services/dns-server/wg-config/coredns/: Corefile
subgraphs/dating/: CLAUDE.md  package.json  schema.graphql  subgraph.yaml  tsconfig.json
subgraphs/scrobble-log/: CLAUDE.md  README.md  package.json  schema.graphql  subgraph.yaml
v2-app/: .env.example  .gitignore  CLAUDE.md  README.md  index.html  vite.config.ts
v2-app/src/: index.css
workers/: README.md
workers/api/: CLAUDE.md  package.json  schema.sql  tsconfig.json  wrangler.toml
(+653 files in other folders)
