[package]
name = "hp-dns-gw"
version = "0.1.0"
edition = "2021"
description = "DNS gateway for interest-based dating - logs queries to Tinybird"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# DNS parsing
hickory-proto = "0.24"

# HTTP client (Tinybird + upstream DoH fallback)
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Web framework for API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Crypto (wallet signature verification, HMAC)
ethers = { version = "2", default-features = false, features = ["rustls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Auth (SIWE + JWT)
siwe = "0.6"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Public suffix list for eTLD+1
psl = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Misc
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
dashmap = "6"  # Concurrent hashmap for user cache
dotenvy = "0.15"  # Load .env files
rand = "0.8"  # Random number generation for mobile auth codes
urlencoding = "2"  # URL encoding for API queries

[profile.release]
lto = true
strip = true
