[package]
name = "scrobbler"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrobbler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

# Auth (browser callback)
open = "5"
urlencoding = "2"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# DBus for MPRIS (Linux media player detection)
# zbus = "4"  # Uncomment when implementing MPRIS

# Crypto for signatures
# k256 = "0.13"  # Uncomment for PKP signing

[profile.release]
lto = true
strip = true
