[package]
name = "heaven"
version = "0.1.0"
edition = "2021"

[lib]
name = "heaven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

# Auth (browser callback)
open = "5"
urlencoding = "2"
base64 = "0.22"

# VPN (WireGuard key generation + config export)
x25519-dalek = { version = "2", features = ["static_secrets"] }
rfd = "0.14"
rand = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# DBus for MPRIS (Linux media player detection)
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures-util = "0.3"

# Hashing for track identity
sha2 = "0.10"

# Timezone for local time calculations
libc = "0.2"

[profile.release]
lto = true
strip = true
